Initial modification of website template

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,11 @@
 main:
-  - title: "Posts"
-    url: /posts/
+  - title: "Projects"
+    url: /projects/
   - title: "Categories"
     url: /categories/
   - title: "Tags"
     url: /tags/
-  - title: "About"
+  - title: "About Me"
     url: /about/
+  - title: "Contact"
+    url: /contact/
