--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
 main:
-  - title: "Projects"
-    url: /projects/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
   - title: "About Me"
     url: /about/
+  - title: "Projects"
+    url: /projects/
+  #- title: "Categories"
+  #  url: /categories/
+  #- title: "Tags"
+  #  url: /tags/
   - title: "Contact"
     url: /contact/
