--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@ main:
   - title: "About Me"
     url: /about/
   - title: "Projects"
-    url: /projects/
+    url: /posts/
   #- title: "Categories"
   #  url: /categories/
   #- title: "Tags"
