--- a/_config.yml
+++ b/_config.yml
@@ -58,14 +58,14 @@ plugins:
 author:
   name   : "Byron Seaberg"
   avatar : "/assets/images/prof_profile.jpg"
-  bio    : "A perpetual learner fascinated by the application of design and controls in the fields of robotics and sustainability" # fascinated by the application of design and controls, design, and robotics."
+  bio    : "A perpetual learner fascinated by design and controls" #the application of design and controls in the fields of robotics and sustainability" # fascinated by the application of design and controls, design, and robotics."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://bseaberg.github.io"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/ByronSeaberg"
+    #- label: "Twitter"
+    #  icon: "fab fa-fw fa-twitter-square"
+    #  url: "https://twitter.com/ByronSeaberg"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/bseaberg"
@@ -75,9 +75,9 @@ author:
 
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/ByronSeaberg"
+    #- label: "Twitter"
+    #  icon: "fab fa-fw fa-twitter-square"
+    #  url: "https://twitter.com/ByronSeaberg"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/bseaberg"
