--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,9 @@ author:
     #- label: "Twitter"
     #  icon: "fab fa-fw fa-twitter-square"
     #  url: "https://twitter.com/ByronSeaberg"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/byron-seaberg-074073128/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/bseaberg"
@@ -78,6 +81,9 @@ footer:
     #- label: "Twitter"
     #  icon: "fab fa-fw fa-twitter-square"
     #  url: "https://twitter.com/ByronSeaberg"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/byron-seaberg-074073128/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/bseaberg"
